# pyramid-project-template

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  .editorconfig  .gitignore  MANIFEST.in  Pipfile  README.txt  development.ini.sample  production.ini  production.ini.sample  pyproject.toml  setup.py  tasks.py  tox.ini  wsgi.py.sample
{{cookiecutter.repo_name}}/tasks/: __init__.py  db.py  helper.py  test.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  resources.py  security.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/alembic/: env.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/models/: __init__.py  mymodel.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/scripts/: initialize_db.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/: helper.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/functional/: conftest.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/functional/fixtures/: create_test_database.sql
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/unit/: test_home.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/views/: home.py  notfound.py
