[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_name }}"
authors = ["{{ cookiecutter.author_info }}"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "*"
pyramid = "*"
pyramid_beaker = "*"
pyramid_mailer = "*"
pyramid_wtforms = "*"
pyramid_jinja2 = "*"
PyMySQL = "*"
alembic = "*"
pyramid_retry = "*"
pyramid_sqlalchemy = "*"
pyramid_tm = "*"
pyramid_exclog = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
mixer = "*"
pyramid_debugtoolbar = "*"
pyramid_ipython = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
rope = "*"
tox = "*"
WebTest = "*"
waitress = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
